objects/Job_Application__c.object
<CustomObject>
    <description>It contains the details of both the vacancies available and the applicants who have applied to those vacancies. One vacancy can have many applicants and one applicant can apply to many vacancies.</description>
    <fields>
        <fullName>Applicant__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Applicant</label>
        <referenceTo>Applicant__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Applications1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Approver3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Applications2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Average_Rating_Score__c</fullName>
        <description>Average Rating Score of an applicant in all his interview rounds (out of 5)</description>
        <formula>Total_Rating_Score__c  /  Total_Interview_Rounds__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Average Rating Score of an applicant in all his interview rounds (out of 5)</inlineHelpText>
        <label>Average Rating Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <description>The day when the Job application is closed</description>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cover_Letter__c</fullName>
        <label>Cover Letter</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Review Resume</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shortlist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Interview</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Selected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Hired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed-Rejected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rejected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Interview_Rounds__c</fullName>
        <description>Total Interview Rounds performed for an applicant</description>
        <label>Total Interview Rounds</label>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Rating_Score__c</fullName>
        <description>Total rating score obtained in all different rounds (Out of 15)</description>
        <inlineHelpText>Total rating score obtained in all different rounds (Out of 15)</inlineHelpText>
        <label>Total Rating Score</label>
        <summarizedField>Review__c.Rating__c</summarizedField>
        <summaryForeignKey>Review__c.Job_Application__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Vacancy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vacancy</label>
        <referenceTo>Vacancy__c</referenceTo>
        <relationshipLabel>Job Applications</relationshipLabel>
        <relationshipName>Job_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Job Application</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Details</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Vacancy__c</columns>
        <columns>Cover_Letter__c</columns>
        <columns>Status__c</columns>
        <columns>Close_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Details</label>
    </listViews>
    <listViews>
        <fullName>JobApplications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Vacancy__c</columns>
        <columns>Cover_Letter__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATEDBY_USER</field>
            <operation>equals</operation>
            <value>jaanu jaan</value>
        </filters>
        <label>JobApplications</label>
    </listViews>
    <listViews>
        <fullName>Vacancy_and_jobapplication_Queue_Job_Application</fullName>
        <filterScope>Queue</filterScope>
        <label>Vacancy and jobapplication Queue</label>
        <queue>Vacancy_and_jobapplication_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A# {000}</displayFormat>
        <label>Job Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Applications</pluralLabel>
    <recordTypes>
        <fullName>HiringManager_JA_Record</fullName>
        <active>true</active>
        <label>HiringManager JA Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Manager</fullName>
        <active>true</active>
        <label>Manager</label>
    </recordTypes>
    <recordTypes>
        <fullName>Recruiter_JA_Record</fullName>
        <active>true</active>
        <label>Recruiter JA Record</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trial_1</fullName>
        <active>false</active>
        <label>Trial 1</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Review_Rule</fullName>
        <active>true</active>
        <description>If the job application &apos;Status-closed&apos; then the review accessibility should completely close.</description>
        <errorConditionFormula>ISNEW()  &amp;&amp;  ISPICKVAL( Status__c , &quot;closed&quot;)</errorConditionFormula>
        <errorMessage>Review cannot be performed as the Job Application Status: is CLOSED</errorMessage>
    </validationRules>
</CustomObject>